# clawd-lobster

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  claude-notebooklm-prompt-guide.md  codex-notebooklm-prompt-guide.md  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  workspaces.json
clawd_lobster/: __init__.py  __main__.py  cli.py  dashboard.py  onboarding.py  pages.py  pages_dashboard.py  pages_onboarding.py  server.py  squad.py
docs/: i18n-keys.md  migration-plan.md  onboarding-guide.html  onboarding-redesign-spec.md
knowledge/: INDEX.md
openspec/: ABSORB-VAULT-SDD.md  MEMORY-ARCHITECTURE.md  VAULT-ARCHITECTURE.md  project.md
scripts/: agent_dispatch.py  evolve-tick.py  heartbeat.ps1  heartbeat.sh  init_db.py  install-lib.ps1  install-lib.sh  new-workspace.ps1  notebooklm-sync.py  patch-codex-plugin.py  security-scan.py  setup-hooks.ps1  setup-hooks.sh  skill-manager.py  spec-squad-sdk.py  spec-squad-ui.py  sync-all.ps1  sync-all.sh  sync-claude-to-codex.py  sync-knowledge.py  validate-spec.py  vault_api.py  vault_init.py  vault_mcp_server.py  vault_migrate.py  vault_parsers.py  workspace-create.py
skills/memory-server/: README.md  pyproject.toml  skill.json
skills/memory-server/mcp_memory/: __init__.py  __main__.py  config.py  db.py  server.py
soul/: personality.md.example
templates/: global-CLAUDE.md  mcp.json.template  settings.json.template  workspace-CLAUDE.md
tests/: run_onboarding_demo.py  test_e2e_onboarding.py  (+1 more)
(+126 files in other folders)
