[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawd-lobster"
version = "1.0.0"
description = "AI-native spec-to-code framework — from idea to working code."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
clawd-lobster = "clawd_lobster.cli:main"

[project.urls]
Homepage = "https://github.com/teddashh/clawd-lobster"
Repository = "https://github.com/teddashh/clawd-lobster"

[tool.setuptools.packages.find]
include = ["clawd_lobster*"]
