[project]
name = "clawd-memory-server"
version = "0.3.0"
description = "Clawd-Lobster MCP Memory Server — unified memory with SQLite + Oracle + Vector Search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4.0",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0,<3.0"]
embeddings = ["openai>=1.0,<3.0"]
all = ["oracledb>=2.0,<3.0", "openai>=1.0,<3.0"]

[project.scripts]
clawd-memory = "mcp_memory.server:main"
